Unifying doc headers, adding version

--- a/bootique-jetty-docs/src/main/asciidoc/_chapters/header.html
+++ b/bootique-jetty-docs/src/main/asciidoc/_chapters/header.html
@@ -1,7 +1,7 @@
 ---
-title: "Bootique Jetty Documentation"
-metaDescription: "Bootique Jetty Module Documentation"
-metaKeywords: "bootique, jetty, server"
+title: "Bootique Jetty - v3.0"
+metaDescription: "Bootique Jetty module documentation v3.0"
+metaKeywords: "bootique, jetty, webserver, documentation, version 3.0"
 ---
 
 
