Docs: update meta titles and descriptions

--- a/bootique-jetty-docs/src/main/asciidoc/_chapters/header.html
+++ b/bootique-jetty-docs/src/main/asciidoc/_chapters/header.html
@@ -1,6 +1,7 @@
 ---
 title: "Bootique Jetty - v3.0"
-metaDescription: "Bootique Jetty module documentation v3.0"
+metaTitle: "Bootique - v3 Jetty Module: Comprehensive Guide"
+metaDescription: "Unlock the power of Jetty within your Bootique - v3 applications. Dive into our guide on integrating Jetty for servlets, static files, websockets, and more."
 metaKeywords: "bootique, jetty, webserver, documentation, version 3.0"
 ---
 
