Docs: update meta titles and descriptions

--- a/bootique-jetty-docs/src/main/asciidoc/_chapters/header.html
+++ b/bootique-jetty-docs/src/main/asciidoc/_chapters/header.html
@@ -1,6 +1,7 @@
 ---
-title: "Bootique Jetty Documentation"
-metaDescription: "Bootique Jetty Module Documentation"
+title: "Bootique v2 Jetty Documentation"
+metaTitle: "Bootique - v2 Jetty Module: Comprehensive Guide"
+metaDescription: "Unlock the full potential of the Bootique - v2 Jetty module with our in-depth guide. Enhance your Java web applications with powerful server capabilities."
 metaKeywords: "bootique, jetty, server"
 ---
 
