Docs: update meta titles and descriptions

--- a/bootique-jetty-docs/src/main/asciidoc/_index/header.html
+++ b/bootique-jetty-docs/src/main/asciidoc/_index/header.html
@@ -1,6 +1,7 @@
 ---
-title: "Bootique Jetty Documentation"
-metaDescription: "Bootique Jetty Module Documentation"
+title: "Bootique v1 Jetty Documentation"
+metaTitle: "Bootique - v1 Jetty Module: Comprehensive Guide"
+metaDescription: "Learn how to seamlessly integrate Jetty server with Bootique - v1. Our documentation details the configuration and deployment of Java web applications using Bootique Jetty."
 metaKeywords: "bootique, jetty, server"
 ---
 
